# ffi_eg

./: .gitignore  Cargo.toml  README.md  build.rs
clib/: CMakeLists.txt  main.cpp
clib/include/: animal.h  ape.h  cat.h  dog.h  pug.h  test.h
clib/src/: CMakeLists.txt  animal.cpp  ape.cpp  cat.cpp  dog.cpp  pug.cpp  test.cpp
src/: main.rs
src/bridge/: builders.cc  builders.h
